<resources>
    <string name="app_name">Gym Record</string>
    <string name="exercise_image">Exercise Image</string>
    <string name="weight">Weight</string>
    <string name="date">Date</string>
    <string name="kg">kg</string>
    <string name="lbs">lbs</string>
    <string name="save">Save</string>
    <string name="clear_all">Clear All</string>
    <string name="date_colon">Date:</string>
    <string name="record_colon">Record:</string>
    <string name="exercise_tab">Exercise Tab</string>
    <string name="reps">Reps</string>
    <string name="reset_all_records">Reset all records</string>
    <string name="free_weights">Free Weights</string>
    <string name="calisthenics">Calisthenics</string>
</resources>