<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MaterialCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewImage"
            style="@style/MaterialCard.NoStrokeWidth"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/exercise_image"
                android:scaleType="centerCrop"
                tools:src="@drawable/deadlift" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient" />

            <TextView
                android:id="@+id/textViewImageTitle"
                style="@style/ItemWorkoutTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                tools:text="Barbell Squat" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewRecordText"
            style="@style/ItemWorkoutTextContent.Words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/record_colon"
            app:layout_constraintStart_toEndOf="@id/cardViewImage"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewDateText"
            style="@style/ItemWorkoutTextContent.Words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:text="@string/date_colon"
            app:layout_constraintStart_toEndOf="@id/cardViewImage"
            app:layout_constraintTop_toBottomOf="@id/textViewRecordText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewRecordValue"
            style="@style/ItemWorkoutTextContent.Values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="55kg" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewDateValue"
            style="@style/ItemWorkoutTextContent.Values"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewRecordValue"
            tools:text="6/12/2023" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardViewImage"
            tools:rating="3.5f" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>